# ComfyUI-WorkflowDropZone

./: .gitignore  README.md  __init__.py  pyproject.toml
web/: dropzone.js
